[package]
name = "raytracing-weekend-rs"
version = "0.1.0"
authors = ["IceSentry <c.giguere42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.0.2"
winit = "0.21.0"
rand = "0.7.3"
rayon = "1.3.0"
impl_ops = "0.1.1"
