[package]
name = 'raytracing-weekend-rs'
version = '0.1.0'
authors = ['IceSentry <c.giguere42@gmail.com>']
edition = '2018'
[profile.release]
lto = 'fat'
codegen-units = 1
panic = 'abort'

[dependencies]
pixels = '0.0.2'
winit = '0.22.0'
rayon = '1.3.0'
impl_ops = '0.1.1'
enum_dispatch = '0.2.1'
structopt = '0.3.11'
lazy_static = '1.4.0'

[dependencies.rand]
version = '0.7.3'
features = ['small_rng']
