[package]
name = 'raytracing-weekend-rs'
version = '0.1.0'
authors = ['IceSentry <c.giguere42@gmail.com>']
edition = '2018'
[profile.release]
lto = 'fat'
codegen-units = 1
panic = 'abort'

[dependencies]
pixels = '0.3.0'
winit = '0.25.0'
structopt = '0.3.12'
image = '0.23.3'
rayon = '1.3.0'
impl_ops = '0.1.1'
enum_dispatch = '0.3.6'
lazy_static = '1.4.0'
derive_builder = '0.10.2'
derive-new = '0.5.8'
glam = '0.15.1'

[dependencies.rand]
version = '0.8.3'
features = ['small_rng']
