[package]
name = 'rtwrs_core'
version = '0.1.0'
authors = ['IceSentry <c.giguere42@gmail.com>']
edition = '2018'
documentation = 'README.md'
[profile.release]
lto = 'fat'
codegen-units = 1
panic = 'abort'

[dependencies]
rayon = '1.3.0'
impl_ops = '0.1.1'
enum_dispatch = '0.2.1'
lazy_static = '1.4.0'
derive_builder = '0.9.0'
derive-new = '0.5.8'

[dependencies.rand]
version = '0.7.3'
features = ['small_rng']
